[gd_scene load_steps=9 format=4 uid="uid://3fi58phf8i47"]

[ext_resource type="Script" uid="uid://5l154rmb23qb" path="res://root_scripts/click_and_move.gd" id="1_aya2i"]
[ext_resource type="Script" uid="uid://bol1a35lr4rwh" path="res://sketches/ui_sketch_1.gd" id="2_i051f"]
[ext_resource type="Script" uid="uid://6pcetsrgo6r0" path="res://other/camera/adjusting_camera_view.gd" id="2_yxrpl"]
[ext_resource type="Texture2D" uid="uid://crj3egloi4las" path="res://other/environment/empty_tile.png" id="3_i051f"]
[ext_resource type="PackedScene" uid="uid://bcsgc30airfn" path="res://other/characters/fox/fox.tscn" id="5_iq0xv"]

[sub_resource type="LabelSettings" id="LabelSettings_8phbn"]
font_size = 24

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_avlev"]
texture = ExtResource("3_i051f")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8phbn"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_avlev")

[node name="ClickAndMove" type="Node2D"]
script = ExtResource("1_aya2i")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = -2000
limit_top = -2000
limit_right = 2000
limit_bottom = 2000
editor_draw_limits = true
script = ExtResource("2_yxrpl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI_Sketch_1" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_i051f")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI_Sketch_1"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -405.0
offset_top = 40.0
offset_right = -24.0
offset_bottom = 199.0
grow_horizontal = 0
theme_override_constants/separation = 20

[node name="ToggleSpritePlacementButton" type="Button" parent="CanvasLayer/UI_Sketch_1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Toggle Sprite Placement"

[node name="SelectedCharacterLabel" type="Label" parent="CanvasLayer/UI_Sketch_1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "empty"
label_settings = SubResource("LabelSettings_8phbn")
horizontal_alignment = 1

[node name="ToggleMove" type="Button" parent="CanvasLayer/UI_Sketch_1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Toggle Move"

[node name="ToggleMoveCombo" type="Button" parent="CanvasLayer/UI_Sketch_1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Toggle Move Combo"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD/////AgAAAAAAAAD+////AgAAAAAAAAD9////AgAAAAAAAAD8////AgAAAAAAAAD7////AgAAAAAAAAD6////AgAAAAAAAAD5//7/AgAAAAAAAAD4//7/AgAAAAAAAAD4//3/AgAAAAAAAAD4//z/AgAAAAAAAAD4//v/AgAAAAAAAAD5//v/AgAAAAAAAAD5//r/AgAAAAAAAAD6//r/AgAAAAAAAAD7//r/AgAAAAAAAAD8//r/AgAAAAAAAAD9//v/AgAAAAAAAAD+//v/AgAAAAAAAAD///v/AgAAAAAAAAD///z/AgAAAAAAAAD///3/AgAAAAAAAAD+//3/AgAAAAAAAAD9//3/AgAAAAAAAAD8//3/AgAAAAAAAAD///7/AgAAAAAAAAD+//7/AgAAAAAAAAD9//7/AgAAAAAAAAD8//7/AgAAAAAAAAD7//7/AgAAAAAAAAD6//7/AgAAAAAAAAD6//3/AgAAAAAAAAD7//3/AgAAAAAAAAD5//3/AgAAAAAAAAD6//z/AgAAAAAAAAD7//z/AgAAAAAAAAD8//z/AgAAAAAAAAD9//z/AgAAAAAAAAD5//z/AgAAAAAAAAD+//z/AgAAAAAAAAD8//v/AgAAAAAAAAD7//v/AgAAAAAAAAD6//v/AgAAAAAAAAD4//r/AgAAAAAAAAD9//r/AgAAAAAAAAD+//r/AgAAAAAAAAD///r/AgAAAAAAAAD4////AgAAAAAAAAD5////AgAAAAAAAAA=")
tile_set = SubResource("TileSet_8phbn")

[node name="Fox" parent="." instance=ExtResource("5_iq0xv")]
position = Vector2(-271, 60)

[node name="Fox2" parent="." instance=ExtResource("5_iq0xv")]
position = Vector2(-20, 65)
